fix(cards): prevent alignment issues by excluding center alignment

--- a/scss/custom-styles/_cards.scss
+++ b/scss/custom-styles/_cards.scss
@@ -73,7 +73,7 @@
     word-break: break-word;
   }
 
-  &:not(.align-justify) {
+  :not(.align-justify):not(.align-center) {
     justify-content: flex-start;
   }
 
